--- a/css/layout.css
+++ b/css/layout.css
@@ -23,5 +23,25 @@
 }
 
 /* Posititoning Classes */
+.col-1 {
+  float: left;
+  width: 32.66%;
+}
 
+.col-2 {
+  float: left;
+  width: 66.33%;
+}
 
+.col-3 {
+  margin-bottom: 1%;
+}
+
+[class*="col-"] {
+  margin-left: 1%;
+  margin-bottom: 1%;
+}
+
+.first {
+  margin-left: 0%;
+}
